Fix mobile vert layout issues for responsiveness

--- a/src/app/architecture/page.module.css
+++ b/src/app/architecture/page.module.css
@@ -10,16 +10,13 @@
 }
 
 .rotate-message-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   height: fit-content;
-  width: auto;
-  top: 67px;
-  position: relative;
+  width: 100vw;
+  top: 86px;
+  position: absolute;
   z-index: 2;
 
-  font-size: 14px;
+  font-size: 12px;
   text-shadow: 2px 2px 4px black;
 }
 
@@ -38,14 +35,29 @@
   z-index: 1;
 }
 
+.gallery {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+}
+
+.gallery-spacer {
+  height: 105px;
+}
+
+.gallery-swiper {
+  width: 85vw;
+  height: calc((var(--vh, 1vh) * 100) - 135px);
+  margin: 0vh auto 0vh auto;
+  box-shadow: 1px 1px 11px 1px #000000c9;
+}
+
 .section-title-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   height: fit-content;
-  width: auto;
-  margin: 1vh 0vw 0vh 0vw;
-  position: relative;
   z-index: 1;
 
   font-size: 20px;
@@ -53,12 +65,20 @@
 }
 
 @media only screen and (max-width: 949px) and (orientation: landscape) {
-
   .main {
     display: block;
   }
 
-  .rotate-message-container, .section-title-container {
+  .gallery {
+    height: 100vh;
+  }
+
+  .gallery-spacer {
+    display: none;
+  }
+
+  .rotate-message-container,
+  .section-title-container {
     display: none;
   }
 }
