--- a/src/app/components/GallerySwiper/GallerySwiper.css
+++ b/src/app/components/GallerySwiper/GallerySwiper.css
@@ -1,10 +1,7 @@
 .swiper {
-  width: 85%;
-  height: 79%;
-  margin-bottom: 4vh;
+  width: 100%;
+  height: 100%;
   border-radius: 5px;
-  top: 51px;
-  box-shadow: 1px 1px 11px 1px #000000c9;
 }
 
 .swiper-button-next,
